# computer-science-masters

./: README.md
intro_operations_research/labs/: pyproject.toml
intro_operations_research/labs/list_#7/: exercise1_dijkstra.py  exercise1_floyd.py  exercise1_kruskal.mod  exercise1_kruskal.py  exercise1_kruskal_classes.py  exercise1_kruskal_dummy.py  exercise3.csv  exercise4.csv  exercise4.py  exercise4_v2.py  exercise4_v2.txt
intro_operations_research/labs/lista1/: lista1_questao1.mod  lista1_questao2.mod  lista1_questao3.mod
intro_operations_research/labs/lista2/: lista2_questao1.mod  lista2_questao2.mod
intro_operations_research/labs/lista3/: lista3_questao1.mod  lista3_questao1_v2.mod  lista3_questao2.mod  lista3_questao3.mod  lista3_questao3_v2.mod  lista3_questao4.mod  lista3_questao4_v2.mod
intro_operations_research/labs/lista4/: lista4_questao1.mod  lista4_questao2.mod  lista4_questao2_v2.mod
intro_operations_research/labs/lista5/: lista5_questao1.mod  lista5_questao2.mod  lista5_questao3.mod  lista5_questao3_v2.mod  lista5_questao4_v1.mod  lista5_questao4_v2.mod  lista5_questao4_v3.mod  lista5_questao4_v4.mod  lista5_questao4_vFinal.mod
intro_operations_research/labs/lista6/: lista6_exercicio1.mod  lista6_exercicio1_p0.mod  lista6_exercicio1_p1.mod  lista6_exercicio1_p2.mod  lista6_exercicio1_p3.mod  lista6_exercicio1_p4.mod  lista6_exercicio1_p5.mod  lista6_exercicio1_p6.mod  lista6_exercicio1_p7.mod  lista6_exercicio1_p8.mod  lista6_exercicio2.mod  lista6_exercicio2_p0.mod  lista6_exercicio2_p1.mod  lista6_exercicio2_p10.mod  lista6_exercicio3.mod  (+18 more)
(+64 files in other folders)
